# zpg-projekt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: application.hpp  camera.hpp  camera_observer.hpp  enums.hpp  light.hpp  model.hpp  models.hpp  mouse.hpp  movement.hpp  object.hpp  observer.hpp  renderable.hpp  scene.hpp  shader.hpp  shaders.hpp  skybox.hpp  terrain.hpp  texture.hpp
resources/models/a380_alt/: untitled.mtl
resources/shaders/: blinn.frag  constant.frag  lambert.frag  phong.frag  shader.frag  shader.vert  skybox.frag  skybox.vert  terrain.frag
src/: application.cpp  camera.cpp  light.cpp  main.cpp  model.cpp  models.cpp  mouse.cpp  movement.cpp  object.cpp  observer.cpp  renderable.cpp  scene.cpp  shader.cpp  shaders.cpp  skybox.cpp  terrain.cpp  texture.cpp
